@@ -1,3 +1,9 @@
+2001-03-31  Dave Peticolas  <dave@krondo.com>
+
+	* src/scm/report.scm: translate report name
+
+	* src/gnome/window-main.c: fix some i18n bugs
+
 2001-03-31  Christian Stimming  <stimming@tuhh.de>
 
 	* src/scm/html-utilities.scm (gnc:html-build-acct-table): fix
